--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "AkashiCoin", email = "i@loli.vet"},
 ]
 license = {text = "MIT"}
-dependencies = ["nonebot2>=2.0.0rc2", "nonebot-adapter-onebot>=2.1.5", "openai>=1.3.5"]
+dependencies = ["nonebot2>=2.0.0rc2", "nonebot-adapter-onebot>=2.1.5", "openai>=1.3.5", "docstring-parser>=0.15"]
 requires-python = ">=3.8"
 readme = "README.md"
 
